plugins {
	id 'java'
	id 'application'
	id 'org.springframework.boot' version '4.0.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.fidelix.codingclub'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(26)
	}
}

repositories {
	mavenCentral()
}

application {
	mainClass = 'com.fidelix.codingclub.openaiapimock.OpenAiApiMockApplication'
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
	implementation 'net.datafaker:datafaker:2.5.4'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'
	testCompileOnly 'org.projectlombok:lombok'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	testAnnotationProcessor 'org.projectlombok:lombok'
}

// Ensure the Fat Jar is what gets packaged
distributions {
	main {
		contents {
			from(bootJar) {
				into "lib"
			}
		}
	}
}

tasks.register('createExe', Exec) {
	dependsOn installDist

	// This ensures we get the toolchain path without the IDE "metadata" error
	def javaToolchainService = project.extensions.getByType(JavaToolchainService)
	def launcherProvider = javaToolchainService.launcherFor(java.toolchain)

	doFirst {
		def launcher = launcherProvider.get()
		def javaHome = launcher.metadata.installationPath.asFile.absolutePath
		def jpackagePath = "${javaHome}/bin/jpackage.exe"

		workingDir project.projectDir

		commandLine jpackagePath,
				'--type', 'app-image',
				'--dest', "${layout.buildDirectory.get().asFile}/dist",
				'--name', 'OpenAiApiMocker',
				'--main-jar', "${project.name}-${version}.jar",
				'--main-class', 'com.fidelix.codingclub.openaiapimock.OpenAiApiMockApplication',
				'--input', "${layout.buildDirectory.get().asFile}/install/${project.name}/lib",
				'--win-console',
				'--app-version', '0.0.1',
				'--add-modules', 'java.base,java.instrument,jdk.unsupported,java.naming,java.management,java.desktop,java.sql,java.xml,java.prefs,java.security.jgss,java.security.sasl,java.net.http'
				'--verbose'
	}
}